kubernetes/deployment.yaml
# Copyright (c) 2026, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# WSO2 Inc. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: icp-deployment
  labels:
    app: icp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icp
  template:
    metadata:
      labels:
        app: icp
    spec:
      containers:
        - name: icp-container
          image: wso2icp:2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9445
              name: https
            - containerPort: 9449
              name: opensearch
